-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b23
-
sparc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8149238 | 8u101 | Gerald Thornbrugh | P4 | Resolved | Fixed | b01 |
| JDK-8145821 | 8u92 | Gerald Thornbrugh | P4 | Resolved | Fixed | b02 |
| JDK-8155334 | emb-8u101 | Gerald Thornbrugh | P4 | Resolved | Fixed | b01 |
I get a couple of build errors when building the
hotspot/src/cpu/sparc/vm/frame_sparc.cpp:442: error: ‘frame nth_sender(int)’ defined but not used
hotspot/src/share/vm/runtime/safepoint.cpp:771: error: ‘void print_me(intptr_t*, intptr_t*, bool*)’ defined but not used
The functions in question are debug functions declared static.
hotspot/src/cpu/sparc/vm/frame_sparc.cpp:442: error: ‘frame nth_sender(int)’ defined but not used
hotspot/src/share/vm/runtime/safepoint.cpp:771: error: ‘void print_me(intptr_t*, intptr_t*, bool*)’ defined but not used
The functions in question are debug functions declared static.
- backported by
-
JDK-8145821 Build errors with gcc on sparc/fastdebug
-
- Resolved
-
-
JDK-8149238 Build errors with gcc on sparc/fastdebug
-
- Resolved
-
-
JDK-8155334 Build errors with gcc on sparc/fastdebug
-
- Resolved
-