8046611: Build errors with gcc on sparc/fastdebug

Reviewed-by: dholmes, ctornqvi